Add postgres connection

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -5,5 +5,8 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "PostgresConnection": "Username=postgres;Server=localhost;Port=5432;Integrated Security=true;Pooling=true;"
   }
 }
